testdata/positive/unary_ops.rs
fn main() {
    let neg_num = 0 - 42;
    let not_flag = true && false;
}

