testdata/negative/logical_type_error.rs
fn main() {
    let result = 42 && 10;  // Логический оператор с числами
}

